# InstrumentacaoBaseDeTestes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Logo.psd  README.md
CAD/Minimal-KiCAD/minimal/RP2040_minimal_r2/: RP2040_minimal_r2.kicad_pcb  RP2040_minimal_r2.kicad_pro  RP2040_minimal_r2.kicad_sch
CAD/PCB/PCB/: New_Library.bak  New_Library.kicad_sym  PCB.kicad_pro  PCB.kicad_sch  sym-lib-table  ~PCB.kicad_sch.lck
src/: 5x8_font.h  8x8_font.h  config.h  display.pio  display_driver.c  display_driver.h  helpers.c  helpers.h  hw_config.c  main.cpp  main.h  sd_card_driver.c  sd_card_driver.h  types.h
